fixed[rsvpBox]: fix overflow text

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,9 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.breakWord {
+  max-width: 100%; /* atau nilai yang sesuai */
+  overflow-wrap: break-word; /* Mengizinkan teks untuk membungkus jika terlalu panjang */
+  word-break: break-word; /* Memecah kata panjang jika perlu */
+}
